--- a/index.html
+++ b/index.html
@@ -7,11 +7,93 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="favicon/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
-        <header></header>
-        <main></main>
+        <header>
+            <div class="wrap_content_head">
+                <div class="wrap_nav">
+                    <div class="left_nav">
+                        <div class="products">
+                            <p>контейнери:</p>
+                            <div class="product">1100л</div>
+                            <div class="product">240л</div>
+                            <div class="product">120л</div>
+                        </div>
+                        <p class="services">послуги</p>
+                        <p class="contacts">контакти</p>
+                    </div>
+                    <div class="right_nav">
+                        <div class="wrapp_select_phone">
+                            <select class="phones">
+                                <option class="phone">+380 97 - 746 - 6704</option>
+                                <option class="phone">+380 97 - 746 - 6705</option>
+                                <option class="phone">+380 97 - 746 - 6706</option>
+                                <option class="phone">+380 97 - 746 - 6707</option>
+                            </select>
+                        </div>
+                        <div class="wrap-requestCall">
+                            <p class="requestCall">замовити дзвінок</p>
+                        </div>
+                        <div class="selectLanguage">
+                            <p class="lang activeLang">укр</p>
+                            <p class="lang">ру</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap_name_site">
+                    <div class="logo">
+                        <img src="./img/imagesHeader/logo-eurocontainer-145x140.svg" alt="">
+                    </div>
+                    <div class="wrap_slogan">
+                        <p class="slogan">ваша чистота - наша турбота</p>
+                    </div>
+                </div>
+                <div class="wrap_present_products">
+                    <div class="wrap_product">
+                        <img src="./img/imagesHeader/container-blue-240.png" alt="240л">
+                        <div class="descriptionSize">
+                            <p class="liter">240л</p>
+                            <p class="look_product">подивитись</p>
+                        </div>
+                    </div>
+                    <div class="wrap_product">
+                        <img src="./img/imagesHeader/containers-metall-plastic-1100.png" alt="1100л">
+                        <div class="descriptionSize">
+                            <p class="liter">1100л</p>
+                            <p class="look_product">подивитись</p>
+                        </div>
+                    </div>
+                    <div class="wrap_product">
+                        <img src="./img/imagesHeader/container-red-120.png" alt="120л">
+                        <div class="descriptionSize">
+                            <p class="liter">120л</p>
+                            <p class="look_product">подивитись</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrap_company_description">
+                    <div class="company_offer">
+                        <p class="text_offer">Пропонуємо контейнери для сміття для побутових відходів:</p>
+                        <p class="text_offer_bold">нові, вживані, оцинковані, з пластику, з плоскою та сферичною кришкою, різног об'єму та кольору.</p>
+                    </div>
+                    <div class="about_company">
+                        <p>Наша компанія займається поставкою та реалізацією євроконтейнерів
+                            для сміття для підприємств, комунальних служб та інших.
+                            У нас можна придбати контейнери та урни для ТПВ(сміття): з пластику, оцинковані, металеві
+                        </p>
+                        <p class="about_company_blue">За дуже приємними цінами</p>
+                    </div>
+                    <div class="order_now">
+                        <p>замовити зараз</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+
+        </main>
         <footer></footer>
     </div>
     <script src="js/main.js"></script>
